some refactorings on ToDoServiceTests, implemented TaskService and tests for it